--- a/public/assets/scss/components/_HeroSlider.scss
+++ b/public/assets/scss/components/_HeroSlider.scss
@@ -11,6 +11,24 @@
   min-height: calc(100vh + 150px);
   position: relative;
 
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.85) 0%,
+      rgba(0, 0, 0, 0.5) 30%,
+      rgba(0, 0, 0, 0.3) 60%,
+      transparent 100%
+    );
+    z-index: 9;
+    pointer-events: none;
+  }
+
   &.heignt-100vh {
     min-height: calc(100vh + 0px);
 
